Finishing first version of all texts in the website

--- a/config/_default/menus.en.toml
+++ b/config/_default/menus.en.toml
@@ -75,4 +75,15 @@ pageRef = "/organization"
 [[footer]]
 name = "Privacy Policy"
 pageRef = "/privacy-policy"
+weight = 1
+
+[[footer]]
+name = "Terms and conditions"
+pageRef = "/terms-conditions"
+weight = 2
+
+[[footer]]
+name = "Acknoledgements and gratitude"
+pageRef = "/acknoledgements-gratitude"
 weight = 3
+
