Build and typo fix

--- a/config/_default/menus.en.toml
+++ b/config/_default/menus.en.toml
@@ -23,8 +23,8 @@ weight = 4
 
 [[main]]
 parent = "Join our Journey"
-name = "As an colaborator"
-pageRef = "/colaborator"
+name = "As an collaborator"
+pageRef = "/collaborator"
 
 [[main]]
 parent = "Join our Journey"
