--- a/hugo.toml
+++ b/hugo.toml
@@ -1,6 +1,6 @@
 ######################## default configuration ####################
 # The base URL of your site (required). This will be prepended to all relative URLs.
-baseURL = "http://opensourcejourney.org"
+baseURL = "https://opensourcejourney.org"
 # Title of your website (required).
 title = "Journey"
 # Your theme name
